--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 /frontend/node_modules
-/ls/node_modules
+/backend/node_modules
 /frontend/.env
-/ls/.env
+/backend/.env
 /terraform/.terraform
 /terraform/.terraform.lock.hcl
